# wpml_codec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-ndk-android.yml
cmake/: Functions.cmake
sample/: CMakeLists.txt  main.cpp
sample/data/: mapping3d.kmz  几何体精细航线.kmz  巡检航点航线.kmz  幕墙斜面航线.kmz  智能建造管理平台.kmz
wpml_codec/: CMakeLists.txt
wpml_codec/include/: wpml_codec.hpp
wpml_codec/include/wpml_codec/: common.h  core.h  enum.h  enums.h  macro.h  macros.h  structs.h  utils.h  version.h  version.h.ini
wpml_codec/src/: core.cpp  utils.cpp
